# QuantBeyoundEfficiency

./: .env.example  .gitignore  2.20  4.51.0  README.md  aggregate_results.py  cookbook.ipynb  devlog.md  inference_test.ipynb  interpretability_experiment.ipynb  projectplan.md  pyproject.toml  qwen3_experiment1.yaml  requirements.txt  requirements_awq.txt  requirements_cuda.txt  test_additional.py  test_lmjudge_benches.py  test_sorry.py
report/: .gitignore  fig-prompt-structure.tex  fig-quant-aware-adv-suffix.tex  quant_beyound_efficiency.tex  references.bib  removed.tex
report/0626-qwen3-1.7b-quant-utility-matirx-yingte/: SUMMARY.md  results.csv  results_table.py
report/0627-qwen3-1.7b-quant-sorry-matrix-yingte/: SUMMARY.md  results.csv  (+1 more)
results/: README.md
scripts/: README.md  adv_diff_4gpu.sbatch  build_hendrycks_ethics_local.py  prefetch_datasets.py  qwen3_1.7b_quant_bench_matrix_0629.sbatch  qwen3_1.7b_sorry.sbatch  run_config.sbatch
src/: README.md  __init__.py  envvar.py  run.py  utils.py
templates/: README.md  model.yaml  model_bench.yaml  model_bench_matrix.yaml  model_bench_quant_alignment_matrix.yaml  model_bench_quant_alignment_utility_matrix.yaml  qwen3_1.7b_awq_w4a16_asym_all_bench.yaml  qwen3_1.7b_experiment1_additional_smoke.yaml  qwen3_1.7b_experiment_lmjudge_matrix.yaml  qwen3_1.7b_sorry_matrix.yaml  qwen3_4b_experiment1_0shot.yaml  qwen3_4b_experiment1_additional.yaml  qwen3_4b_experiment_lmjudge_matrix.yaml  qwen3_4b_sorry_matrix_v3_ids.yaml  qwen3_4b_sorry_matrix_v3_ids_testfull.yaml  qwen_3_bonus_benches.yaml  qwen_3_experiment1.yaml
(+606 files in other folders)
