[project]
name = "quantbeyoundefficiency"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "llmcompressor==0.12.0",
    "lm-eval[hf,math]==0.4.12",
    "numpy==2.2.6",
    #"openai>=2.44.0", # optional for judge
    "optimum-quanto==0.2.7",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "torch==2.12.0",
    "transformers==5.10.1",
]

[project.optional-dependencies]
judge = [
    "openai>=2.44.0"
]
lens = [
    "transformer-lens==3.5.1"
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true